<resources>
    <string name="app_name">Mathank</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings">Paramètres</string>
    <string name="help">Aide</string>
    <string name="puzzle">Puzzle</string>
    <string name="battle">Affrontement</string>
    <string name="title">Mathanks</string>
    <string name="globalfont">monospace</string>
    <string name="ingame">En Partie</string>
</resources>