<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/back_primary">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30dp"
        android:textColor="@color/front_primary"
        android:textAlignment="center"
        android:layout_weight="1"
        android:padding="10dp"
        android:fontFamily="@string/globalfont"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></View>
    <Button
        android:id="@+id/battle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/battle"
        android:textColor="@color/front_secondary"
        android:backgroundTint="@color/back_secondary"
        android:fontFamily="@string/globalfont"
        android:padding="10dp"
        android:textSize="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/back_secondary"
        android:layout_weight="1"
        ></View>
    <Button
        android:id="@+id/puzzle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/puzzle"
        android:textColor="@color/front_secondary"
        android:padding="10dp"
        android:fontFamily="@string/globalfont"
        android:backgroundTint="@color/back_secondary"
        android:textSize="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></View>
    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/front_secondary"
        android:fontFamily="@string/globalfont"
        android:text="@string/help"
        android:backgroundTint="@color/back_secondary"
        android:padding="10dp"
        android:textSize="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></View>
    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/globalfont"
        android:textColor="@color/front_secondary"
        android:text="@string/settings"
        android:backgroundTint="@color/back_secondary"
        android:padding="10dp"
        android:textSize="20dp"/>
</LinearLayout>